--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,9 +1,9 @@
 /**ajout de la bonne couleur à la nav bar**/
 #mainNav {
-    background-color: #d59d4b !important;
+    background-color: #3bbb6600 !important;
 }
 .navbarResponsive{
-  background-color: #d59d4b !important;
+  background-color: #6cc52c00 !important;
 
 }
 .btnAjoutEnchere{
