--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,10 +1,6 @@
 /**ajout de la bonne couleur à la nav bar**/
 #mainNav {
-    background-color: #3bbb6600 ;
-}
-.navbarResponsive{
-  background-color: #6cc52c00 ;
-
+    background-color: #1cd158b1 !important ;
 }
 
 
