--- a/src/css/VisuelEnchereList.css
+++ b/src/css/VisuelEnchereList.css
@@ -28,13 +28,13 @@ caratères dans la validation du formulaire***/
     justify-content: center;
    width: 350px;
 
-    border: 1px solid black;
-    background-color: rgb(92, 123, 90) ;
+    border: 1px solid rgb(172, 169, 169);
+    background-color: rgb(190, 179, 171) ;
     z-index: 1;
 }
 .card-img-top{
-height:290px;
-width: 100%;
+height:290px!important;
+width: 100%!important;
 }
 .card-text{
 height:150px ;
